@@ -26,16 +26,20 @@ var CloudCommander, Util, DOM, Dropbox;
     function load(){
         console.time('dropbox load');
         
-        var lElement = DOM.anyload({
-            src         : 'https://www.dropbox.com/static/api/1/dropbox.js',
-            not_append  : true,
-            id          : 'dropboxjs',
-            func        :  DropBoxStore.choose
-        
+        cloudcmd.getConfig(function(pConfig){
+            var lElement = DOM.anyload({
+                src         : 'https://www.dropbox.com/static/api/1/dropbox.js',
+                not_append  : true,
+                id          : 'dropboxjs',
+                func        :  DropBoxStore.choose
+            
+            });
+    
+            var lDropBoxId = pConfig.dropbox_chooser_key;
+            lElement.setAttribute('data-app-key', lDropBoxId);
+            document.body.appendChild(lElement);
+            console.timeEnd('dropbox load');
         });
-        
-        lElement.setAttribute('data-app-key', 'o7d6llji052vijk');
-        document.body.appendChild(lElement);
     }
 
     DropBoxStore.choose = function(){
